corrigi algumas informações na html

--- a/Gabriel Vicente Rodrigues Piucci.html
+++ b/Gabriel Vicente Rodrigues Piucci.html
@@ -34,9 +34,9 @@ Nota: Estou usando o teclado QWERTY e estou impossibilitado no momento de usar o
         Meus jogos
 <b>favoritos</b> são: <br>
 <ul>
-<li>Counter Strike : Global Offensive</li>
+<li>FFXIV</li>
 <li>Light In The Dark</li>
-<li>Paladins</li>
+<li>Black Desert Online</li>
 <li>Elder Scrolls Online</li>
 <li>Batman : Arkham Asylum</li>
 </ul>
@@ -47,7 +47,7 @@ Nota: Estou usando o teclado QWERTY e estou impossibilitado no momento de usar o
 <b>Conquistas</b> são: <br>
 <ul>
 <li>Reconhecimento pelo Excelente atendimento, Atento S/A, 2020</li>
-<li>Campeonato Municipal de Volei, 2003</li>
+<li>Campeonato Municipal de Volei, 2013</li>
 <li>Ser aceito como tradutor pela Payoneer, 2020</li>
 </ul>
    </br>
